<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BookingNow</string>
    <string name="action_settings">Settings</string>
    <string name="account">帐号：</string>  
    <string name="password">密码：</string>  
    <string name="login_title">请先登录</string>
    <string name="confirm">尚未提交的订单更改将丢失</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="exit">退出</string>
    <string name="waiting">请稍等</string>
    <string name="logining">登录中...</string>
    <string name="connect_fail">无法连接到服务器</string>
    <string name="showTicket">查看订单</string>
    <string name="backHome">返回分类</string>
    <string name="ticketTitle">您的订单</string>
    <string name="minusBtn">-</string>
    <string name="addBtn">+</string>
    <string name="hintinmenu">赶紧选择您心爱的美食吧</string>
    <string name="hintinticket">开始点菜</string>
    <string name="newcreate">新建</string>
    <string name="commit">提交</string>
    <string name="modification">修改</string>
    <string name="cancelticket">取消订单</string>
    <string name="commitupdate">提交更改</string>
    <string name="cancelupdate">撤销更改</string>
    <string name="pay">买单</string>
    <string name="finish">交易完成</string>
    <string name="paying">已申请结帐</string>
    <string name="reset">清空</string>
    <string name="commitsuccess">提交成功</string>
    
    <string name="ticket_list_title1">桌号</string>
    <string name="ticket_list_title2">提交者</string>
    <string name="ticket_list_title3">状态</string>
    <string name="ticket_list_title4">提交/更新时间</string>
    <string name="newticketbtn">新建订单</string>
    
    <string name="foodunavailablebtn">缺料</string>
    <string name="freebtn">赠送</string>
    <string name="seatssearchbtn">座位查询</string>
    <string name="ticketssearchbtn">订单查询</string>
    <string name="peoplecount">就餐人数</string>
    <string name="phonenumber">手机号码</string>
    <string name="customername">客户名称</string>
    <string name="searchbtn">查询</string>
    <string name="bookingbtn">预订</string>
    <string name="cancelfreebtn">取消赠送</string>
    <string name="seatavailable">找到符合条件的座位</string>
    <drawable name="common_background">#4e72b8</drawable>
    <drawable name="menu_background">#494e8f</drawable>
    
</resources>
