<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_background"
    android:gravity="center"
    android:orientation="horizontal" >
     <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="horizontal" >
	        <TextView android:id="@+id/title1"
	            android:layout_weight="1"
	            android:layout_width="0dp"
	            android:layout_height="40dp"
	            android:textAppearance="@android:style/TextAppearance.Medium"
	            android:text="@string/ticket_list_title1"
	            android:gravity="center"
	            android:singleLine="true"
	            android:textColor="@android:color/black"/>
	        <TextView android:id="@+id/title2"
	            android:layout_weight="1"
	            android:layout_width="0dp"
	            android:gravity="center"
	            android:layout_height="40dp"
	            android:textAppearance="@android:style/TextAppearance.Medium"
	            android:text="@string/ticket_list_title2"
	            android:singleLine="true"
	            android:textColor="@android:color/black"/>
	        <TextView android:id="@+id/title3"
	            android:layout_weight="1"
	            android:layout_width="0dp"
	            android:gravity="center"
	            android:layout_height="40dp"
	            android:textAppearance="@android:style/TextAppearance.Medium"
	            android:text="@string/ticket_list_title3"
	            android:singleLine="true"
	            android:textColor="@android:color/black"/>
	        <TextView android:id="@+id/title4"
	            android:layout_weight="2"
	            android:layout_width="0dp"
	            android:gravity="center"
	            android:layout_height="40dp"
	            android:textAppearance="@android:style/TextAppearance.Medium"
	            android:text="@string/ticket_list_title4"
	            android:singleLine="true"
	            android:textColor="@android:color/black"/>
	</LinearLayout>
	<Button android:id="@+id/newticket"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:text="@string/newticketbtn"
            android:textAppearance="@android:style/TextAppearance.Medium"/>
</RelativeLayout>
